test/types/range/hilde/rangeSliceStatic.good
rangeSliceStatic.chpl:8: syntax error: near '('
